--- a/styles.css
+++ b/styles.css
@@ -130,23 +130,25 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 /* WAG GAGALAWIN !!!!!!!!!!!*/
 :root {
-  --scale: 2;
-  --size: 150px;
+  --scale: 1.3;
+  --size: 250px;
   --scrollbar-width: 36px;
-  --handle-background: url("https://www.svgrepo.com/show/263197/magnifying-glass-search.svg");
+  /* --handle-background: url("https://www.svgrepo.com/show/263197/magnifying-glass-search.svg"); */
 }
 
 .handle {
   position: absolute;
-  height: calc(var(--size) * 1.9);
-  width: calc(var(--size) * 1.9);
+  z-index: 9999;
+  /* height: calc(var(--size) * 1.8);
+  width: calc(var(--size) * 1.8);
   background: var(--handle-background);
   background-size: contain;
-  filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(-2px -2px 10px rgba(0, 0, 0, 0.5)); */
 }
 
 .magnifying-glass {
-  position: absolute;
+  z-index: 9999;
+  position:relative;
   padding: 0;
   margin: 0;
   height: var(--size);
@@ -158,6 +160,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 
 .magnifying-glass::after {
+  z-index: 9999;
   display: block;
   position: relative;
   content: "";
